# hackathon

./: .env  .gitignore  next.config.js  package-lock.json  package.json
.github/workflows/: main.yml
SmartContract/: Cargo.toml
SmartContract/meta/: Cargo.toml
SmartContract/meta/src/: main.rs
SmartContract/output/: xlogin.abi.json  xlogin.imports.json  xlogin.mxsc.json  xlogin.wasm
SmartContract/src/: storage.rs  views.rs  xlogin.rs
SmartContract/wasm/: Cargo.toml
SmartContract/wasm/src/: lib.rs
src/: config.devnet.ts  config.ts
src/api/: net.config.ts
src/api/sc/: sc.ts
src/api/sc/calls/: index.ts
src/api/sc/queries/: index.ts
src/assets/abi/: xlogin.abi.json
src/components/Modal/: Modal.tsx
src/config/: chakraTheme.ts
src/hoc/: withDappProvider.tsx
src/lib/: auth.ts
src/pages/: _app.tsx  index.tsx
src/pages/CreateWallet/: CreateWallet.tsx
src/pages/api/auth/: [...nextauth].ts
src/utils/functions/: cryptography.ts
src/utils/types/: sc.interface.ts
src/views/Home/: Home.tsx
src/views/Home/components/ExistingUser/: ExistingUser.tsx  ExistingUserModal.tsx
src/views/Home/components/LandingPage/: LandingPage.tsx
src/views/Home/components/NewUserForm/: CreatePin.tsx  CreateWallet.tsx  CreateWalletModal.tsx  Form.tsx  NewUserForm.tsx  ViewWallet.tsx
src/views/Home/hooks/: hooks.ts
src/views/Home/services/: calls.ts  queries.ts
