[package]
name = "xlogin-wasm"
version = "0.0.0"
authors = [ "Kostas Tzoumpas <tzoumpas.ks@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib"]

[workspace]
members = [ "."]


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.xlogin]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.43.4"
